--- a/_posts/svg/2016-12-19-svg.md
+++ b/_posts/svg/2016-12-19-svg.md
@@ -4,3 +4,9 @@
  * x1 y1, x2 y2: 两点确定一条直线
  * stroke: 笔画的颜色
  * stroke-width: 笔画的宽度
+ * stroke-linecap: 指定不同的值来确定线的头尾形状，可能的取值为butt、round、square
+ 
+ 
+* polyline
+ * stroke-linecap: 指定不同的值来确定线的头尾形状，可能的取值为butt、round、square
+ 
