--- a/_posts/svg/2016-12-19-svg.md
+++ b/_posts/svg/2016-12-19-svg.md
@@ -1,12 +1,20 @@
 # svg基本图形
 
-* line
- * x1 y1, x2 y2: 两点确定一条直线
- * stroke: 笔画的颜色
- * stroke-width: 笔画的宽度
- * stroke-linecap: 指定不同的值来确定线的头尾形状，可能的取值为butt、round、square
+## line 线段
+* x1 y1, x2 y2: 两点确定一条直线
+* style
+    * stroke: 笔画颜色
+    * stroke-width: 笔画宽度
+    * stroke-linecap: 指定不同的值来确定线的头尾形状，可能的取值为butt、round、square
+    
  
- 
-* polyline
- * stroke-linecap: 指定不同的值来确定线的头尾形状，可能的取值为butt、round、square
- 
+## polyline 折线
+* points: 成对的出现的点，连接器俩形成折线
+* style
+    * stroke: 笔画颜色
+    * stroke-width: 笔画宽度
+    * stroke-linecap: 指定不同的值来确定线的头尾形状，可能的取值为butt、round、square
+    * stroke-linejoin: 线段交叉处的效果，Miter(尖的)，round(圆的)，bevel(平的)
+    * stroke-miterlimit(不常用): 设置相交处的显示宽度与线宽的比率，默认值是4
+
+
