增加WebSocket的支持

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -64,9 +64,16 @@ function webGLChecker() {
 // 检查是否支持Worker
 function workerChecker() {
   return !!window.Worker;
+}
 
 // 检查是否支持File API
 function fileAPIChecker() {
   return window.File && window.FileReader && window.FileList && window.Blob;
 }
+
+// 检查是支持WebSocket
+function webSocketChecker() {
+  return !!window.WebSocket;
+}
+
 ```
