js-note 增加vendor判断

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -77,3 +77,34 @@ function webSocketChecker() {
 }
 
 ```
+
+# 判断浏览器vendor和增加前缀
+```javascript
+function vendor() {
+  let style = document.createElement('div').style;
+  let vendors = {
+    webkit: 'webkitTransform',
+    Moz: 'MozTransform',
+    O: 'OTransform',
+    ms: 'msTransform',
+    '': 'transform'
+  };
+  
+  for (let key in vendors) {
+    if (style[vendors[key]] != undefined) {
+      return key;
+    }
+  }
+  
+  return false; 
+}
+
+function prefixStyle(style) {
+  let vendor = vendor();
+  if (vendor === false) {
+    return style;
+  }
+  
+  return vendor + style.charAt(0).toUpperCase() + style.substr(1);
+}
+```
