增加原生触发事件函数

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -108,3 +108,12 @@ function prefixStyle(style) {
   return vendor + style.charAt(0).toUpperCase() + style.substr(1);
 }
 ```
+
+# js 原生触发事件
+```javascript
+function event(target, eventName) {
+  let ev = document.createEvent('Event');
+  ev.initEvent(eventName, true, true);
+  target.dispatchEvent(ev);
+}
+```
