增加货币格式化的正则表达式

--- a/_posts/RegExp/2016-12-23-regexp.md
+++ b/_posts/RegExp/2016-12-23-regexp.md
@@ -1,2 +1,18 @@
 # 正则表达式之?、(?:pattern)、(?!pattern)、(?=pattern)理解及应用
 [参考](http://blog.csdn.net/sunhuaer123/article/details/16343313)
+
+# 将数字格式化为货币形式
+```javascript
+function currency (value, currency = '¥', decimals = 2) {
+
+  let _tempValue = Number.parseFloat(value).toFixed(decimals);
+
+  if (Number.isNaN(_tempValue) || !Number.isFinite(value) || (!value && value !== 0)) return '';
+
+  let _sign = _tempValue >= 0 ? '' : '-';
+  let _int = '' + Math.abs(_tempValue.split('.')[0]);
+  let _float = _tempValue.split('.')[1] || '';
+
+  return `${currency}${_sign}${_int.replace(/\B(?=(\d{3})+(?!\d))/g, ',')}.${_float}`;
+}
+```
