增加查询节点样式的方法getComputedStyle()

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -117,3 +117,8 @@ function event(target, eventName) {
   target.dispatchEvent(ev);
 }
 ```
+
+# 获取节点上的样式
+```javascript
+el.getComputedStyle();
+```
