增加获取字符串时间长度的函数

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -122,3 +122,15 @@ function event(target, eventName) {
 ```javascript
 el.getComputedStyle();
 ```
+
+
+# 获取字符串的实际长度
+```javascript
+function strLength (str) {
+        if (!str) {
+            return 0;
+        }
+        str = String(str);
+        return str.replace(/[\u0391-\uFFE5]/g, 'aa').length;
+    }
+```
