--- a/_posts/RegExp/2016-12-23-regexp.md
+++ b/_posts/RegExp/2016-12-23-regexp.md
@@ -5,14 +5,15 @@
 ```javascript
 function currency (value, currency = '¥', decimals = 2) {
 
-  let _tempValue = Number.parseFloat(value).toFixed(decimals);
-
-  if (Number.isNaN(_tempValue) || !Number.isFinite(value) || (!value && value !== 0)) return '';
-
-  let _sign = _tempValue >= 0 ? '' : '-';
-  let _int = '' + Math.abs(_tempValue.split('.')[0]);
-  let _float = _tempValue.split('.')[1] || '';
-
-  return `${currency}${_sign}${_int.replace(/\B(?=(\d{3})+(?!\d))/g, ',')}.${_float}`;
+    let _tempValue = Number.parseFloat(value);
+     let _tempValue2 = _tempValue.toFixed(decimals);
+   
+     if ((Number.isNaN(_tempValue)) || (!Number.isFinite(_tempValue)) || (!_tempValue && _tempValue !== 0)) return '-';
+   
+     let _sign = _tempValue >= 0 ? '' : '-';
+     let _int = '' + Math.abs(_tempValue2.split('.')[0]);
+     let _float = _tempValue2.split('.')[1] || '';
+   
+     return `${_sign}${_int.replace(/\B(?=(\d{3})+(?!\d))/g, ',')}.${_float}`;
 }
 ```
