增加日志类型

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -134,3 +134,12 @@ function strLength (str) {
         return str.replace(/[\u0391-\uFFE5]/g, 'aa').length;
     }
 ```
+
+# 增加特定日志类型
+```javascript
+const log = (type) => console.log.bind(console, type);
+const logger = log('error: ');
+logger('test for logger');
+```
+
+>> error: test for logger
