增加截取包含中英文混合字符串不超过指定长度的最长字符串

--- a/_posts/tattle/2017-01-15-js-note.md
+++ b/_posts/tattle/2017-01-15-js-note.md
@@ -135,6 +135,30 @@ function strLength (str) {
     }
 ```
 
+# 截取包含中文字符串长度，截取不超过len长度的中英文混合字符
+```
+function truncateStr(data, len=20) {
+
+  if (!data) return '';
+
+  data = String(data);
+
+  let i = 0, str = '';
+
+  for (let code of data) {
+    if (/[\u0391-\uFFE5]/.test(code)) {
+      i = i + 2;
+    } else {
+      i++;
+    }
+    if (i <= len) {
+      str += code;
+    }
+  }
+  return str;
+}
+```
+
 # 增加特定日志类型
 ```javascript
 const log = (type) => console.log.bind(console, type);
